# deuterium

./: Cargo.toml
src/: insert_query.rs  lib.rs
src/function/: mod.rs
src/sql/: delete.rs  function.rs  select.rs  value.rs
tests/: insert.rs  select.rs
