[package]

name = "deuterium"
version = "0.4.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
license = "MIT"
description = "Deuterium is a fancy SQL builder for Rust. It's designed to provide a DSL to easily build SQL queries in safe and *typed* way."
keywords = ["sql", "orm"]

[[test]]
name = "tests"

[features]
default = ["postgres"]

[dependencies]
time = "*"
uuid = "*"
rustc-serialize = "*"
postgres = { version = "0.15.2", features = ["with-uuid", "with-rustc-serialize", "with-time"], optional = true }
